fix beta word hides menu on mobile

--- a/app/styles/components/_app.scss
+++ b/app/styles/components/_app.scss
@@ -47,10 +47,14 @@
     }
 
     .beta {
-      margin-left: $tiny-size;
+      margin-left: $x-tiny-size + 1;
       color: orange;
       font-style: italic;
       text-transform: none;
+
+      @include desktop {
+        margin-left: $tiny-size;
+      }
     }
 
     button, a, label {
